--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -69,6 +69,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editPassword"
+                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
