--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,7 +16,7 @@
             android:id="@+id/textView"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/guidelineMiddle"
-            app:layout_constraintVertical_bias="0.204"
+            app:layout_constraintVertical_bias="0.429"
             android:textSize="30sp"/>
 
     <TextView
@@ -88,12 +88,14 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintVertical_bias="0.259"/>
 
     <androidx.constraintlayout.widget.Guideline
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/guidelineMiddle"
             android:orientation="horizontal"
-            app:layout_constraintGuide_end="303dp"/>
+            app:layout_constraintGuide_end="410dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
