--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#90A4AE</color>
+    <color name="colorPrimary">#9fa8da</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="white">#fff</color>
     <color name="text">#000000</color>
