change constraintGuide to percent

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -97,5 +97,5 @@
             android:layout_height="wrap_content"
             android:id="@+id/guidelineMiddle"
             android:orientation="horizontal"
-            app:layout_constraintGuide_end="410dp"/>
+            app:layout_constraintGuide_percent="0.30"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
