--- a/app/src/main/res/layout/book_recycler.xml
+++ b/app/src/main/res/layout/book_recycler.xml
@@ -1,6 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-</LinearLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view"
+                android:layout_gravity="center"
+                android:layout_width="300dp"
+                android:layout_height="100dp"
+                card_view:cardCornerRadius="4dp"
+                android:layout_marginEnd="8dp"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="8dp"
+                card_view:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp"
+                card_view:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
+                card_view:layout_constraintBottom_toBottomOf="parent"/>
+
+        <TextView
+                android:id="@+id/book_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="@+id/card_view"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="@+id/card_view"
+                tools:text="try headline"
+                app:layout_constraintEnd_toEndOf="@+id/card_view"
+                app:layout_constraintStart_toStartOf="@+id/card_view"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
