added margin decorator, added TO DO

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -38,7 +38,7 @@
             android:layout_marginTop="24dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/fabAddBook"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
