--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -27,35 +27,35 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintBottom_toTopOf="@+id/textView2"
+                app:layout_constraintBottom_toTopOf="@+id/book_author"
                 app:layout_constraintVertical_chainStyle="spread"/>
 
         <TextView
-                android:text="TextView"
+                android:text="Author"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView2"
+                android:id="@+id/book_author"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/book_title"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintBottom_toTopOf="@+id/textView3"
+                app:layout_constraintBottom_toTopOf="@+id/book_genre"
                 android:layout_marginTop="8dp"/>
 
         <TextView
-                android:text="TextView"
+                android:text="Genre"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView3"
+                android:id="@+id/book_genre"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                app:layout_constraintTop_toBottomOf="@+id/book_author"
                 app:layout_constraintHorizontal_bias="0.5"
                 android:layout_marginTop="8dp"/>
 
