--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9fa8da</color>
+    <color name="colorPrimary">#b2dfdb</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="white">#fff</color>
     <color name="text">#000000</color>
-    <color name="colorSecondary">#FF8A65</color>
+    <color name="colorSecondary">#cfcfcf</color>
 
 </resources>
