--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -8,12 +8,13 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/colorSecondary"
         app:cardCornerRadius="16dp"
-        android:elevation="4dp">
+        android:elevation="4dp"
+        android:id="@+id/book_card">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-<!--todo: improve design and view ids-->
+        <!--todo: improve design and view ids-->
 
         <TextView
                 android:id="@+id/book_title"
@@ -31,7 +32,7 @@
                 app:layout_constraintVertical_chainStyle="spread"/>
 
         <TextView
-                android:text="Author"
+                android:text="@string/author"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/book_author"
@@ -45,7 +46,7 @@
                 android:layout_marginTop="8dp"/>
 
         <TextView
-                android:text="Genre"
+                android:text="@string/genre"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/book_genre"
