--- a/app/src/main/res/layout-v26/fragment_detail.xml
+++ b/app/src/main/res/layout-v26/fragment_detail.xml
@@ -46,7 +46,7 @@
             app:layout_constraintTop_toBottomOf="@+id/create_name"
             android:layout_marginTop="32dp"
             app:layout_constraintHorizontal_bias="0.472"
-            android:autofillHints="" tools:targetApi="o"/>
+            android:autofillHints=""/>
 
     <TextView
             android:text="@string/create_author"
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/edit_author"
-            android:hint="@string/create_author_hint"
+            android:hint="@string/author_hint"
             android:inputType="text"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/create_author"
@@ -73,10 +73,10 @@
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.489"
-            android:autofillHints="" tools:targetApi="o"/>
+            android:autofillHints=""/>
 
     <TextView
-            android:text="@string/genre"
+            android:text="@string/genre_create_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/create_genre"
