--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -13,8 +13,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/detail_frag_header"
             android:textSize="30sp"
-            tools:layout_conversion_absoluteHeight="0dp"
-            tools:layout_conversion_absoluteWidth="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp"
@@ -26,39 +24,37 @@
             android:layout_height="50dp"
             android:text="@string/book_name"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.51"
             android:id="@+id/create_name"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/detail_frag_header"/>
+            app:layout_constraintEnd_toStartOf="@+id/edit_name"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.4"
+            android:layout_marginBottom="116dp"
+            app:layout_constraintBottom_toTopOf="@+id/create_author"
+            android:layout_marginStart="8dp"/>
 
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/edit_name"
             android:inputType="text"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
             android:hint="@string/name_book_hint"
-            app:layout_constraintTop_toBottomOf="@+id/create_name"
-            android:layout_marginTop="32dp"
-            app:layout_constraintHorizontal_bias="0.472"
-            android:autofillHints="" tools:targetApi="o"/>
+            android:layout_marginBottom="72dp"
+            app:layout_constraintBottom_toTopOf="@+id/edit_author"/>
 
     <TextView
             android:text="@string/create_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
+            android:layout_width="43dp"
+            android:layout_height="34dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="55dp"
-            app:layout_constraintTop_toBottomOf="@+id/edit_name"
-            android:id="@+id/create_author"/>
+            android:id="@+id/create_author"
+            app:layout_constraintEnd_toStartOf="@+id/edit_author"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.421"
+            android:layout_marginBottom="64dp"
+            app:layout_constraintBottom_toTopOf="@+id/create_genre"/>
 
     <EditText
             android:layout_width="wrap_content"
@@ -66,39 +62,34 @@
             android:id="@+id/edit_author"
             android:hint="@string/create_author_hint"
             android:inputType="text"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/create_author"
-            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.489"
-            android:autofillHints="" tools:targetApi="o"/>
+            android:autofillHints=""
+            tools:targetApi="o"
+            android:layout_marginBottom="72dp"
+            app:layout_constraintBottom_toTopOf="@+id/spinner_genre"
+            android:layout_marginEnd="16dp"/>
 
     <TextView
             android:text="@string/genre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/create_genre"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/edit_author"
-            android:layout_marginTop="20dp"
-            app:layout_constraintHorizontal_bias="0.492"/>
+            android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toStartOf="@+id/spinner_genre"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="168dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.213"/>
 
     <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/create_genre"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintHorizontal_bias="0.492"
-            android:id="@+id/spinner_genre">
+            android:layout_marginEnd="84dp"
+            android:id="@+id/spinner_genre"
+            android:layout_marginBottom="164dp"
+            app:layout_constraintBottom_toBottomOf="parent">
 
     </Spinner>
 
@@ -110,8 +101,9 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="260dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="57dp"
-            android:id="@+id/create_button"/>
+            android:layout_marginBottom="44dp"
+            android:id="@+id/create_button"
+            app:layout_constraintHorizontal_bias="1.0"/>
 
 
 
