--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -14,7 +14,7 @@
             android:layout_height="0dp"
             tools:layout_conversion_absoluteHeight="0dp"
             tools:layout_conversion_absoluteWidth="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/dashb_frag_header"
+            app:layout_constraintTop_toBottomOf="@+id/tvDashboardHeader"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
             android:text="@string/dashboard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/dashb_frag_header"
+            android:id="@+id/tvDashboardHeader"
             android:textSize="30sp"
             tools:layout_conversion_absoluteHeight="0dp"
             tools:layout_conversion_absoluteWidth="0dp"
@@ -38,17 +38,18 @@
             android:layout_marginTop="24dp"/>
 
     <ImageView
-            android:id="@+id/emptyState"
-            android:layout_width="290dp"
+            android:id="@+id/ivEmptyState"
+            android:layout_width="0dp"
             android:src="@drawable/empty"
             android:gravity="center"
-            android:layout_height="430dp"
-            app:layout_constraintEnd_toEndOf="@+id/recycler_view"
+            android:layout_height="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp"
+            app:layout_constraintTop_toBottomOf="@id/tvDashboardHeader"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabAddBook"
